docs: http api documentation
