# app/gateway/api/rest/response/errors.go
@@ -10,7 +10,7 @@ import (
 type Error struct {
 	Code    string `json:"code"`
 	Message string `json:"message,omitempty"`
-}
+} // @name ErrorResponse
 
 type AppErr struct {
 	StatusCode int
